src/Bluetooth/Raw/SdpLib.hs


{-# LINE 64 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_seq_append" c'sdp_seq_append
  :: Ptr C'sdp_data_struct -> Ptr C'sdp_data_struct -> IO (Ptr C'sdp_data_struct)
foreign import ccall "&sdp_seq_append" p'sdp_seq_append
  :: FunPtr (Ptr C'sdp_data_struct -> Ptr C'sdp_data_struct -> IO (Ptr C'sdp_data_struct))

{-# LINE 65 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_attr_add" c'sdp_attr_add
  :: Ptr C'sdp_record_t -> CUShort -> Ptr C'sdp_data_struct -> IO CInt
foreign import ccall "&sdp_attr_add" p'sdp_attr_add
  :: FunPtr (Ptr C'sdp_record_t -> CUShort -> Ptr C'sdp_data_struct -> IO CInt)

{-# LINE 66 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_attr_remove" c'sdp_attr_remove
  :: Ptr C'sdp_record_t -> CUShort -> IO ()
foreign import ccall "&sdp_attr_remove" p'sdp_attr_remove
  :: FunPtr (Ptr C'sdp_record_t -> CUShort -> IO ())

{-# LINE 67 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_attr_replace" c'sdp_attr_replace
  :: Ptr C'sdp_record_t -> CUShort -> Ptr C'sdp_data_struct -> IO ()
foreign import ccall "&sdp_attr_replace" p'sdp_attr_replace
  :: FunPtr (Ptr C'sdp_record_t -> CUShort -> Ptr C'sdp_data_struct -> IO ())

{-# LINE 68 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_set_uuidseq_attr" c'sdp_set_uuidseq_attr
  :: Ptr C'sdp_record_t -> CUShort -> Ptr C'_sdp_list -> IO CInt
foreign import ccall "&sdp_set_uuidseq_attr" p'sdp_set_uuidseq_attr
  :: FunPtr (Ptr C'sdp_record_t -> CUShort -> Ptr C'_sdp_list -> IO CInt)

{-# LINE 69 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_uuidseq_attr" c'sdp_get_uuidseq_attr
  :: Ptr C'sdp_record_t -> CUShort -> Ptr (Ptr C'_sdp_list) -> IO CInt
foreign import ccall "&sdp_get_uuidseq_attr" p'sdp_get_uuidseq_attr
  :: FunPtr (Ptr C'sdp_record_t -> CUShort -> Ptr (Ptr C'_sdp_list) -> IO CInt)

{-# LINE 70 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_attr_add_new" c'sdp_attr_add_new
  :: Ptr C'sdp_record_t -> CUShort -> CUChar -> Ptr () -> IO CInt
foreign import ccall "&sdp_attr_add_new" p'sdp_attr_add_new
  :: FunPtr (Ptr C'sdp_record_t -> CUShort -> CUChar -> Ptr () -> IO CInt)

{-# LINE 71 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_set_info_attr" c'sdp_set_info_attr
  :: Ptr C'sdp_record_t -> CString -> CString -> CString -> IO ()
foreign import ccall "&sdp_set_info_attr" p'sdp_set_info_attr
  :: FunPtr (Ptr C'sdp_record_t -> CString -> CString -> CString -> IO ())

{-# LINE 72 "src/Bluetooth/Raw/SdpLib.hsc" #-}
{- #cinline sdp_set_service_classes , Ptr <sdp_record_t> -> Ptr <struct _sdp_list> -> IO CInt -}
{- #cinline sdp_get_service_classes , Ptr <sdp_record_t> -> Ptr (Ptr <struct _sdp_list>) -> IO CInt -}
{- #cinline sdp_set_browse_groups , Ptr <sdp_record_t> -> Ptr <struct _sdp_list> -> IO CInt -}
foreign import ccall "sdp_set_access_protos" c'sdp_set_access_protos
  :: Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO CInt
foreign import ccall "&sdp_set_access_protos" p'sdp_set_access_protos
  :: FunPtr (Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO CInt)

{-# LINE 76 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_set_add_access_protos" c'sdp_set_add_access_protos
  :: Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO CInt
foreign import ccall "&sdp_set_add_access_protos" p'sdp_set_add_access_protos
  :: FunPtr (Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO CInt)

{-# LINE 77 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_proto_port" c'sdp_get_proto_port
  :: Ptr C'_sdp_list -> CInt -> IO CInt
foreign import ccall "&sdp_get_proto_port" p'sdp_get_proto_port
  :: FunPtr (Ptr C'_sdp_list -> CInt -> IO CInt)

{-# LINE 78 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_get_proto_desc" c'sdp_get_proto_desc
  :: Ptr C'_sdp_list -> CInt -> IO (Ptr C'sdp_data_struct)
foreign import ccall "&sdp_get_proto_desc" p'sdp_get_proto_desc
  :: FunPtr (Ptr C'_sdp_list -> CInt -> IO (Ptr C'sdp_data_struct))

{-# LINE 79 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_set_lang_attr" c'sdp_set_lang_attr
  :: Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO CInt
foreign import ccall "&sdp_set_lang_attr" p'sdp_set_lang_attr
  :: FunPtr (Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO CInt)

{-# LINE 80 "src/Bluetooth/Raw/SdpLib.hsc" #-}
{- #cinline sdp_set_service_ttl , Ptr <sdp_record_t> -> CUInt -> IO CInt -}
{- #cinline sdp_set_record_state , Ptr <sdp_record_t> -> CUInt -> IO CInt -}
{- #ccall sdp_set_service_id , Ptr <sdp_record_t> -> <uuid_t> -> IO () -}
{- #ccall sdp_set_group_id , Ptr <sdp_record_t> -> <uuid_t> -> IO () -}
{- #cinline sdp_set_service_avail , Ptr <sdp_record_t> -> CUChar -> IO CInt -}
foreign import ccall "sdp_set_profile_descs" c'sdp_set_profile_descs
  :: Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO CInt
foreign import ccall "&sdp_set_profile_descs" p'sdp_set_profile_descs
  :: FunPtr (Ptr C'sdp_record_t -> Ptr C'_sdp_list -> IO CInt)

{-# LINE 86 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_set_url_attr" c'sdp_set_url_attr
  :: Ptr C'sdp_record_t -> CString -> CString -> CString -> IO ()
foreign import ccall "&sdp_set_url_attr" p'sdp_set_url_attr
  :: FunPtr (Ptr C'sdp_record_t -> CString -> CString -> CString -> IO ())

{-# LINE 87 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_service_search_req" c'sdp_service_search_req
  :: Ptr C'sdp_session_t -> Ptr C'_sdp_list -> CUShort -> Ptr (Ptr C'_sdp_list) -> IO CInt
foreign import ccall "&sdp_service_search_req" p'sdp_service_search_req
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'_sdp_list -> CUShort -> Ptr (Ptr C'_sdp_list) -> IO CInt)

{-# LINE 88 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_service_attr_req" c'sdp_service_attr_req
  :: Ptr C'sdp_session_t -> CUInt -> C'sdp_attrreq_type_t -> Ptr C'_sdp_list -> IO (Ptr C'sdp_record_t)
foreign import ccall "&sdp_service_attr_req" p'sdp_service_attr_req
  :: FunPtr (Ptr C'sdp_session_t -> CUInt -> C'sdp_attrreq_type_t -> Ptr C'_sdp_list -> IO (Ptr C'sdp_record_t))

{-# LINE 89 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_service_search_attr_req" c'sdp_service_search_attr_req
  :: Ptr C'sdp_session_t -> Ptr C'_sdp_list -> C'sdp_attrreq_type_t -> Ptr C'_sdp_list -> Ptr (Ptr C'_sdp_list) -> IO CInt
foreign import ccall "&sdp_service_search_attr_req" p'sdp_service_search_attr_req
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'_sdp_list -> C'sdp_attrreq_type_t -> Ptr C'_sdp_list -> Ptr (Ptr C'_sdp_list) -> IO CInt)

{-# LINE 90 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_record_alloc" c'sdp_record_alloc
  :: IO (Ptr C'sdp_record_t)
foreign import ccall "&sdp_record_alloc" p'sdp_record_alloc
  :: FunPtr (IO (Ptr C'sdp_record_t))

{-# LINE 91 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_record_free" c'sdp_record_free
  :: Ptr C'sdp_record_t -> IO ()
foreign import ccall "&sdp_record_free" p'sdp_record_free
  :: FunPtr (Ptr C'sdp_record_t -> IO ())

{-# LINE 92 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_device_record_register_binary" c'sdp_device_record_register_binary
  :: Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> Ptr CUChar -> CUInt -> CUChar -> Ptr CUInt -> IO CInt
foreign import ccall "&sdp_device_record_register_binary" p'sdp_device_record_register_binary
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> Ptr CUChar -> CUInt -> CUChar -> Ptr CUInt -> IO CInt)

{-# LINE 93 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_device_record_register" c'sdp_device_record_register
  :: Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> Ptr C'sdp_record_t -> CUChar -> IO CInt
foreign import ccall "&sdp_device_record_register" p'sdp_device_record_register
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> Ptr C'sdp_record_t -> CUChar -> IO CInt)

{-# LINE 94 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_record_register" c'sdp_record_register
  :: Ptr C'sdp_session_t -> Ptr C'sdp_record_t -> CUChar -> IO CInt
foreign import ccall "&sdp_record_register" p'sdp_record_register
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'sdp_record_t -> CUChar -> IO CInt)

{-# LINE 95 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_device_record_unregister_binary" c'sdp_device_record_unregister_binary
  :: Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> CUInt -> IO CInt
foreign import ccall "&sdp_device_record_unregister_binary" p'sdp_device_record_unregister_binary
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> CUInt -> IO CInt)

{-# LINE 96 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_device_record_unregister" c'sdp_device_record_unregister
  :: Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> Ptr C'sdp_record_t -> IO CInt
foreign import ccall "&sdp_device_record_unregister" p'sdp_device_record_unregister
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> Ptr C'sdp_record_t -> IO CInt)

{-# LINE 97 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_record_unregister" c'sdp_record_unregister
  :: Ptr C'sdp_session_t -> Ptr C'sdp_record_t -> IO CInt
foreign import ccall "&sdp_record_unregister" p'sdp_record_unregister
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'sdp_record_t -> IO CInt)

{-# LINE 98 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_device_record_update_binary" c'sdp_device_record_update_binary
  :: Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> CUInt -> Ptr CUChar -> CUInt -> IO CInt
foreign import ccall "&sdp_device_record_update_binary" p'sdp_device_record_update_binary
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> CUInt -> Ptr CUChar -> CUInt -> IO CInt)

{-# LINE 99 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_device_record_update" c'sdp_device_record_update
  :: Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> Ptr C'sdp_record_t -> IO CInt
foreign import ccall "&sdp_device_record_update" p'sdp_device_record_update
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'bdaddr_t -> Ptr C'sdp_record_t -> IO CInt)

{-# LINE 100 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_record_update" c'sdp_record_update
  :: Ptr C'sdp_session_t -> Ptr C'sdp_record_t -> IO CInt
foreign import ccall "&sdp_record_update" p'sdp_record_update
  :: FunPtr (Ptr C'sdp_session_t -> Ptr C'sdp_record_t -> IO CInt)

{-# LINE 101 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_record_print" c'sdp_record_print
  :: Ptr C'sdp_record_t -> IO ()
foreign import ccall "&sdp_record_print" p'sdp_record_print
  :: FunPtr (Ptr C'sdp_record_t -> IO ())

{-# LINE 102 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid16_create" c'sdp_uuid16_create
  :: Ptr C'uuid_t -> CUShort -> IO (Ptr C'uuid_t)
foreign import ccall "&sdp_uuid16_create" p'sdp_uuid16_create
  :: FunPtr (Ptr C'uuid_t -> CUShort -> IO (Ptr C'uuid_t))

{-# LINE 103 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid32_create" c'sdp_uuid32_create
  :: Ptr C'uuid_t -> CUInt -> IO (Ptr C'uuid_t)
foreign import ccall "&sdp_uuid32_create" p'sdp_uuid32_create
  :: FunPtr (Ptr C'uuid_t -> CUInt -> IO (Ptr C'uuid_t))

{-# LINE 104 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid128_create" c'sdp_uuid128_create
  :: Ptr C'uuid_t -> Ptr () -> IO (Ptr C'uuid_t)
foreign import ccall "&sdp_uuid128_create" p'sdp_uuid128_create
  :: FunPtr (Ptr C'uuid_t -> Ptr () -> IO (Ptr C'uuid_t))

{-# LINE 105 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid16_cmp" c'sdp_uuid16_cmp
  :: Ptr () -> Ptr () -> IO CInt
foreign import ccall "&sdp_uuid16_cmp" p'sdp_uuid16_cmp
  :: FunPtr (Ptr () -> Ptr () -> IO CInt)

{-# LINE 106 "src/Bluetooth/Raw/SdpLib.hsc" #-}
foreign import ccall "sdp_uuid128_cmp" c'sdp_uuid128_cmp
  :: Ptr () -> Ptr () -> IO CInt
foreign import ccall "&sdp_uuid128_cmp" p'sdp_uuid128_cmp
  :: FunPtr (Ptr () -> Ptr () -> IO CInt)
